--- a/.tmp.html
+++ b/.tmp.html
@@ -1,6 +1,23 @@
----
-title: Home
----
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Home</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width">
+        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+        <!-- build:css(.tmp/assets) assets/styles/main.css -->
+        <link rel="stylesheet" href="assets/styles/main.css">
+        <!-- endbuild -->
+    </head>
+    <body>
+        <!-- Include a nav from partials -->
+        Nav yo
+
+      <div class="wrapper">
+        <!-- The body of the page -->
+        
 
 <h1>Front End Boilerplate</h1>
 
@@ -33,3 +50,15 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
         <a class="overlay-close" href="#"><i class="icon-arrow-down"></i></a>
     </article>
 </section>
+      </div>
+
+        <!-- build:js assets/scripts/main.js -->
+        <script src="assets/bower_components/jquery/jquery.js"></script>
+        <script src="assets/scripts/alerts.js"></script>
+        <script src="assets/scripts/overlays.js"></script>
+        <script src="assets/scripts/tabs.js"></script>
+        <script src="assets/scripts/app.js"></script>
+        <!-- endbuild -->
+
+    </body>
+</html>
